--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -11,6 +11,7 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:2.0.0-alpha1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
 
     // Android ViewModel
     implementation "android.arch.lifecycle:extensions:1.1.1"
