--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -37,6 +37,9 @@ dependencies {
     implementation 'com.google.dagger:dagger-android-support:2.16'
     kapt 'com.google.dagger:dagger-android-processor:2.16'
 
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.5.0'
+
     // Unit Tests
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.18.3'
