--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -26,10 +26,15 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 
-    // RxJava / RxAndroid / RxKotlin
+    // RxJava / RxAndroid / RxKotlin / RxBinding
     implementation 'io.reactivex.rxjava2:rxjava:2.1.13'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex:rxkotlin:2.0.0-RC1'
+
+    // PAGING
+    implementation "android.arch.paging:runtime:1.0.0"
+    // optional - RxJava support, currently in release candidate
+    implementation "android.arch.paging:rxjava2:1.0.1"
 
     // Dagger 2
     implementation 'com.google.dagger:dagger:2.16'
